--- a/image-process-front-end/src/App.css
+++ b/image-process-front-end/src/App.css
@@ -21,6 +21,9 @@
 .App-intro {
   font-size: large;
 }
+.uploaded_img{
+  max-height: 300px; 
+}
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
