Adds ts when original image was uploaded from local machine
Issues:
https://github.com/vertikoff/ImageUploadFrontEnd/issues/22

--- a/image-process-front-end/src/App.css
+++ b/image-process-front-end/src/App.css
@@ -22,7 +22,13 @@
   font-size: large;
 }
 .uploaded_img{
-  max-height: 300px; 
+  max-height: 300px;
+}
+
+td{
+  word-wrap: break-word;
+  text-overflow: inherit !important;
+  white-space: normal !important;
 }
 
 @keyframes App-logo-spin {
