Clean up text and add some styling to dropzone
Issues:
https://github.com/vertikoff/ImageUploadFrontEnd/issues/30
https://github.com/vertikoff/ImageUploadFrontEnd/issues/29

--- a/image-process-front-end/src/App.css
+++ b/image-process-front-end/src/App.css
@@ -24,6 +24,13 @@
 .uploaded_img{
   max-height: 300px;
 }
+.dropzone > div{
+  margin: auto;
+  margin-top: 20px;
+}
+.dropzone > div:hover{
+  cursor: pointer;
+}
 
 td{
   word-wrap: break-word;
