--- a/image-process-front-end/src/App.css
+++ b/image-process-front-end/src/App.css
@@ -32,6 +32,26 @@
   cursor: pointer;
 }
 
+.standard-btn{
+  margin: 20px;
+  padding: 10px;
+  font-size: 15px;
+  border:none;
+  background: #00b5ad;
+  color: white;
+}
+.standard-btn:hover{
+  cursor: pointer;
+  background: #005855;
+}
+
+.revert-btn{
+  background: #ff5d5d;
+}
+.revert-btn:hover{
+  background: #ff1a1a;
+}
+
 td{
   word-wrap: break-word;
   text-overflow: inherit !important;
